--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.23",
+    "build": "^0.1.4",
     "mathjs": "^12.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
